clusters/non-prod/infra/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    name: longhorn-system
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/component: infrastructure
